2008-03-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.27 released.

2008-03-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (Implementation::initialize): New function.
	(ParserFile::load_nested): Call it.
	(Implementation::add_derived, Implementation::load_derived)
	(Implementation::load_list):  Use 'Treelog::Open'.
	* toplevel.C (Toplevel::parse_system_file): Don't use 'Treelog::Open'.

2008-02-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_time.C (every): New model.
	* harvesting.C (Harvesting::harvest): Renamed from 'operator ()'.
	* crop_std.C: Update caller.
	* submodeler.h (submodel_value): New template.
	* timestep.C (Timestep::null): New function.
	* time.C (Time::null): New function.

2008-02-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_time.C (mm_dd, before_mm_dd, after_mm_dd): Take
	'minute' and 'second' parameters.
	* vcheck.C, vcheck.h (valid_hour, valid_minute): New static member
	functions.

	* chemical_std.C (surface_decompose): New log variable.
	(surface_decompose_rate, surface_decompose_halftime): New paramaters.
	* lib/log.dai ("Surface Chemicals"): Use it.
	* lib/log-std.dai ("Field chemical"): Use it.

	* chemical_std.C (ChemicalStandard::water_turnover_factor): Moved.
	* abiotic.C, abiotic.h (Abiotic::f_h): To here.
	* organic_std.C (OrganicStandard::water_turnover_factor): Use it.

2008-02-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.26 released.

2008-02-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_crop.C (crop_dm_sorg_over): New condition.
	* field.C, field.h, column_std.C, column.h (crop_sorg_dm): New
	member function. 
	* vegevegetation_crops.C, vegetation_permanent.C:
	vegetation.h: (SOrg_DM_by_name): New virtual member function.
	* crop_simple.C, crop_old.C, crop_sold.C, crop_std.C:
	* crop.h (SOrg_DM): New virtual member function.
	
	* crop_std.C (CropStandard::DM): Take 'sorg_height' into account.
	
	* harvesting.C (Harvesting::operator ()): Only harvest as much